WTF::Function adoption should be explicit instead of implicit https://bugs.webkit.org/show_bug.cgi?id=214654

Reviewed by Darin Adler.

Source/JavaScriptCore:

* heap/Heap.cpp:
(JSC::Heap::LambdaFinalizerOwner::finalize): Use new adopt function.

Source/WTF:

* wtf/Function.h:
(WTF::Function<Out):
(WTF::adoptImpl): Added an adopt function for Functions and made the
adopting constructor private.

* wtf/cf/RunLoopCF.cpp:
(WTF::RunLoop::dispatch): Use new adopt function.


Canonical link: https://commits.webkit.org/227482@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264743 268f45cc-cd09-0410-ab3c-d52691b4dbfc